// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner renders Spinner with a label 1`] = `
<div>
  <div
    class="fui-Spinner"
  >
    <span
      class="fui-Spinner__spinner"
    >
      <svg
        class="fui-Spinner__Progressbar"
        role="progressbar"
      >
        <circle
          class="fui-Spinner__Track"
        />
        <circle
          class="fui-Spinner__Tail"
        />
      </svg>
    </span>
    <label
      class="fui-Label fui-Spinner__label"
    >
      Loading
    </label>
  </div>
</div>
`;

exports[`Spinner renders a default state 1`] = `
<div>
  <div
    class="fui-Spinner"
  >
    <span
      class="fui-Spinner__spinner"
    >
      <svg
        class="fui-Spinner__Progressbar"
        role="progressbar"
      >
        <circle
          class="fui-Spinner__Track"
        />
        <circle
          class="fui-Spinner__Tail"
        />
      </svg>
    </span>
  </div>
</div>
`;
